Eclipse uyumlu submission scripti ve resim yükleme düzeltmesi